--- a/package.json
+++ b/package.json
@@ -14,22 +14,22 @@
     "@tauri-apps/api": "^1.0.0-beta.8"
   },
   "devDependencies": {
-    "@sveltejs/kit": "^1.0.0-next.201",
-    "@tauri-apps/cli": "^1.0.0-beta.10",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
-    "eslint": "^8.3.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^3.2.1",
-    "prettier": "^2.5.0",
-    "prettier-plugin-svelte": "^2.5.0",
-    "sass": "^1.44.0",
-    "svelte": "^3.44.2",
-    "svelte-check": "^2.2.10",
-    "svelte-preprocess": "^4.9.8",
-    "svelte2tsx": "^0.4.10",
+    "@sveltejs/kit": "^1.0.0-next.285",
+    "@tauri-apps/cli": "1.0.0-rc.5",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-svelte3": "^3.4.1",
+    "prettier": "^2.5.1",
+    "prettier-plugin-svelte": "^2.6.0",
+    "sass": "^1.49.8",
+    "svelte": "^3.46.4",
+    "svelte-check": "^2.4.5",
+    "svelte-preprocess": "^4.10.4",
+    "svelte2tsx": "^0.5.5",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.5"
   },
   "license": "MIT",
   "repository": {
