--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -6,15 +6,13 @@ default-run = "app"
 edition = "2021"
 rust-version = "1.56"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [build-dependencies]
-tauri-build = { version = "1.0.0-beta.4" }
+tauri-build = { version = "1.0.0-rc.3", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0-beta.8", features = [] }
+tauri = { version = "1.0.0-rc.3", features = [] }
 
 [features]
 default = [ "custom-protocol" ]
