--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:web": "svelte-kit dev",
     "package": "svelte-kit package",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "lint": "prettier --write --plugin-search-dir=. src *.js && eslint --fix src *.js"
+    "lint": "prettier --check --plugin-search-dir=. src *.js && eslint src *.js && svelte-check",
+    "format": "prettier --write --plugin-search-dir=. src *.js && eslint --fix src *.js"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.0.0-beta.8"
@@ -54,11 +55,6 @@
   "prettier": {
     "printWidth": 100,
     "semi": false,
-    "singleQuote": true,
-    "htmlWhitespaceSensitivity": "strict",
-    "svelteSortOrder": "options-scripts-markup-styles",
-    "svelteStrictMode": false,
-    "svelteAllowShorthand": true,
-    "svelteIndentScriptAndStyle": true
+    "singleQuote": true
   }
 }
