--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,17 @@
 {
+  "extends": "./.svelte-kit/tsconfig.json",
   "compilerOptions": {
-    "moduleResolution": "node",
-    "target": "es2019",
-    "module": "es2020",
-    "lib": ["es2020", "DOM"],
-
-    // svelte-preprocess can't tell if you're importing a value or
-    // type, so require 'import type' instead of 'import' for types
-    "importsNotUsedAsValues": "error",
-
-    // To have Svelte warnings/errors correct position
-    "sourceMap": true,
-
-    // Global types
-    "types": ["@sveltejs/kit"],
-
-    "isolatedModules": true,
-    "resolveJsonModule": true,
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "baseUrl": ".",
     "allowJs": true,
-    "paths": {
-      "$lib/*": ["src/lib/*"],
-      "$lib": ["src/lib"]
-    }
-  },
-  "include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
+    "checkJs": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true
+  }
+  // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
+  //
+  // If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
+  // from the referenced tsconfig.json - TypeScript does not merge them in
 }
