--- a/package.json
+++ b/package.json
@@ -7,27 +7,25 @@
     "dev": "tauri dev",
     "dev:web": "vite dev",
     "package": "svelte-package",
-    "lint": "prettier --check src *.js && eslint src *.js && svelte-check --tsconfig ./tsconfig.json",
-    "format": "prettier --write src *.js && eslint --fix src *.js"
-  },
-  "dependencies": {
-    "@tauri-apps/api": "^1.2.0"
+    "lint": "svelte-check --tsconfig ./tsconfig.json && eslint src && prettier --check src",
+    "format": "eslint --fix src && prettier --write src"
   },
   "devDependencies": {
-    "@sveltejs/kit": "^1.0.0",
-    "@sveltejs/package": "^1.0.0",
-    "@tauri-apps/cli": "^1.2.2",
-    "@typescript-eslint/eslint-plugin": "^5.46.1",
-    "@typescript-eslint/parser": "^5.46.1",
-    "eslint": "^8.29.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "prettier": "^2.8.1",
-    "prettier-plugin-svelte": "^2.9.0",
-    "sass": "^1.56.2",
-    "svelte": "^3.55.0",
-    "svelte-check": "^2.10.2",
-    "typescript": "^4.9.4"
+    "@tauri-apps/api": "^1.3.0",
+    "@sveltejs/kit": "^1.18.0",
+    "@sveltejs/package": "^1.0.2",
+    "@tauri-apps/cli": "^1.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-svelte": "^2.28.0",
+    "prettier": "^2.8.8",
+    "prettier-plugin-svelte": "^2.10.0",
+    "sass": "^1.62.1",
+    "svelte": "^3.59.1",
+    "svelte-check": "^3.3.2",
+    "typescript": "^5.0.4"
   },
   "license": "MIT",
   "repository": {
