--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
     "format": "eslint --fix src && prettier --write src"
   },
   "devDependencies": {
-    "@tauri-apps/api": "^1.3.0",
-    "@sveltejs/kit": "^1.18.0",
-    "@sveltejs/package": "^1.0.2",
-    "@tauri-apps/cli": "^1.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
+    "@sveltejs/kit": "^1.30.4",
+    "@sveltejs/package": "^2.3.1",
+    "@tauri-apps/api": "2.0.0-beta.11",
+    "@tauri-apps/cli": "2.0.0-beta.17",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-svelte": "^2.28.0",
-    "prettier": "^2.8.8",
-    "prettier-plugin-svelte": "^2.10.0",
-    "sass": "^1.62.1",
-    "svelte": "^3.59.1",
-    "svelte-check": "^3.3.2",
-    "typescript": "^5.0.4"
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-svelte": "^2.39.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^2.10.1",
+    "sass": "^1.77.1",
+    "svelte": "^4.2.16",
+    "svelte-check": "^3.7.1",
+    "typescript": "^5.4.5"
   },
   "license": "MIT",
   "repository": {
