--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -7,12 +7,12 @@ edition = "2021"
 rust-version = "1.56"
 
 [build-dependencies]
-tauri-build = { version = "1.2", features = [] }
+tauri-build = { version = "2.0.0-beta.15", features = [] }
 
 [dependencies]
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = [] }
+serde_json = "1.0.117"
+serde = { version = "1.0.201", features = ["derive"] }
+tauri = { version = "2.0.0-beta.19", features = [] }
 
 [features]
 default = [ "custom-protocol" ]
