--- a/package.json
+++ b/package.json
@@ -1,58 +1,71 @@
 {
-  "name": "svelte-tauri-filedrop",
-  "version": "1.0.0",
-  "description": "Tauri file drop handling component for Svelte",
-  "type": "module",
-  "scripts": {
-    "dev": "tauri dev",
-    "dev:web": "vite dev",
-    "package": "svelte-package",
-    "lint": "svelte-check --tsconfig ./tsconfig.json && eslint src && prettier --check src",
-    "format": "eslint --fix src && prettier --write src"
-  },
-  "devDependencies": {
-    "@tauri-apps/api": "^1.3.0",
-    "@sveltejs/kit": "^1.18.0",
-    "@sveltejs/package": "^1.0.2",
-    "@tauri-apps/cli": "^1.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-svelte": "^2.28.0",
-    "prettier": "^2.8.8",
-    "prettier-plugin-svelte": "^2.10.0",
-    "sass": "^1.62.1",
-    "svelte": "^3.59.1",
-    "svelte-check": "^3.3.2",
-    "typescript": "^5.0.4"
-  },
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/probablykasper/svelte-tauri-filedrop.git"
-  },
-  "bugs": {
-    "url": "https://github.com/probablykasper/svelte-tauri-filedrop/issues"
-  },
-  "author": {
-    "name": "Kasper Henningsen",
-    "url": "https://kasper.space"
-  },
-  "keywords": [
-    "tauri",
-    "svelte",
-    "file",
-    "drag",
-    "drop",
-    "dropzone"
-  ],
-  "prettier": {
-    "printWidth": 100,
-    "semi": false,
-    "singleQuote": true,
-    "pluginSearchDirs": [
-      "."
-    ]
-  }
+	"name": "svelte-tauri-filedrop",
+	"version": "1.0.0",
+	"description": "Tauri file drop handling component for Svelte",
+	"type": "module",
+	"scripts": {
+		"dev": "tauri dev",
+		"dev:web": "vite dev",
+		"package": "svelte-package",
+		"lint": "svelte-check --tsconfig ./tsconfig.json && eslint src && prettier --check src",
+		"format": "eslint --fix src && prettier --write src"
+	},
+	"devDependencies": {
+		"@sveltejs/kit": "^2.7.2",
+		"@sveltejs/package": "^2.3.6",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@tauri-apps/api": "^1.6.0",
+		"@tauri-apps/cli": "^1.6.3",
+		"eslint": "^9.13.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.46.0",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.7",
+		"sass": "^1.80.3",
+		"svelte": "^5.0.5",
+		"svelte-check": "^4.0.5",
+		"svelte-preprocess": "^6.0.3",
+		"typescript": "^5.6.3",
+		"typescript-eslint": "^8.11.0"
+	},
+	"peerDependencies": {
+		"svelte": "^3.0.0 || ^4.0.0 || ^5.0.0"
+	},
+	"exports": {
+		"./package.json": "./package.json",
+		".": {
+			"types": "./dist/Modal.svelte.d.ts",
+			"svelte": "./dist/Modal.svelte",
+			"default": "./dist/Modal.svelte"
+		}
+	},
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/probablykasper/svelte-tauri-filedrop.git"
+	},
+	"bugs": {
+		"url": "https://github.com/probablykasper/svelte-tauri-filedrop/issues"
+	},
+	"author": {
+		"name": "Kasper Henningsen",
+		"url": "https://kasper.space"
+	},
+	"keywords": [
+		"tauri",
+		"svelte",
+		"file",
+		"drag",
+		"drop",
+		"dropzone"
+	],
+	"prettier": {
+		"useTabs": true,
+		"printWidth": 100,
+		"semi": false,
+		"singleQuote": true,
+		"plugins": [
+			"prettier-plugin-svelte"
+		]
+	}
 }
