--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,11 @@ node_modules
 /build
 /.svelte-kit
 /package
-/src-tauri/target
-/src-tauri/WixTools
+.env
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
+
+/src-tauri/target/
+/src-tauri/gen/schemas
