--- a/package.json
+++ b/package.json
@@ -32,12 +32,22 @@
 	"peerDependencies": {
 		"svelte": "^3.0.0 || ^4.0.0 || ^5.0.0"
 	},
+	"files": [
+		"dist",
+		"!dist/**/*.test.*",
+		"!dist/**/*.spec.*"
+	],
+	"sideEffects": [
+		"**/*.css"
+	],
+	"svelte": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"exports": {
 		"./package.json": "./package.json",
 		".": {
-			"types": "./dist/FileDrop.svelte.d.ts",
-			"svelte": "./dist/FileDrop.svelte",
-			"default": "./dist/FileDrop.svelte"
+			"types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js",
+			"default": "./dist/index.js"
 		}
 	},
 	"license": "MIT",
